--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="prevent-preload-transitions">
 <header class="header wrapper--m">
     <nav class="navbar">
         <a href="/"><img class="navbar__logo" src="/images/logo.svg" alt="logo"></a>
-        <img class="navbar__icon navbar__icon--hamburger" data-hamburger src="/images/icon-menu.svg" alt="icon-hamburger">
+        <img class="navbar__icon navbar__icon--hamburger" data-hamburger src="/images/icon-menu.svg"
+             alt="icon-hamburger">
         <div class="navbar__menu" data-mobile-menu>
-            <img class="navbar__icon navbar__icon--close" data-close-mobile-menu src="/images/icon-close-menu.svg" alt="icon-close">
+            <img class="navbar__icon navbar__icon--close" data-close-mobile-menu src="/images/icon-close-menu.svg"
+                 alt="icon-close">
             <ul class="menu">
                 <li class="menu__item menu__item--dropdown" data-dropdown>
                     <a class="menu__link menu__link--dropdown" data-dropdown-link href="#">Features</a>
@@ -175,5 +177,12 @@
     </section>
 </main>
 <div class="overlay" data-overlay></div>
+<script>
+    // Prevent CSS transitions on page load (for mobile menu. it happens on slow page load)
+    // It's not working if I don't use script tag
+    document.addEventListener("DOMContentLoaded", ()=>{
+        document.body.classList.remove("prevent-preload-transitions")
+    })
+</script>
 </body>
 </html>
